# es-rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: architecture.md  development.md  installation.md  usage.md
src/: lib.rs  main.rs  services.rs
src/domain/: aggregate.rs  commands.rs  events.rs
src/tui/: mod.rs
src/web/: mod.rs
